fix: No ugly scrollbars on win32

--- a/src/renderer/styles/preferences.less
+++ b/src/renderer/styles/preferences.less
@@ -4,7 +4,7 @@
   margin: 10vh 0;
   width: 700px;
   max-height: calc(100% - 20vh);
-  overflow: scroll;
+  overflow: auto;
 
   &.bp3-overlay-appear,
   &.bp3-overlay-enter {
